--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
     <!-- CUSTOM SCRIPTS -->
     <script src="script.js"></script>
-
+    <p>Line added at the end</p>
 </body>
 
 </html>
