Finished new feature

--- a/index.html
+++ b/index.html
@@ -220,6 +220,7 @@
     <!-- CUSTOM SCRIPTS -->
     <script src="script.js"></script>
     <p>Line added at the end</p>
+    <p>Finished feature dev</p>
 </body>
 
 </html>
