Bug Fix applied

--- a/index.html
+++ b/index.html
@@ -221,6 +221,7 @@
     <script src="script.js"></script>
     <p>Line added at the end</p>
     <p>Finished feature dev</p>
+    <p>Applied BugFix</p>
 </body>
 
 </html>
