--- a/index.html
+++ b/index.html
@@ -221,6 +221,8 @@
     <script src="script.js"></script>
     <p>Line added at the end</p>
     <p>Finished feature dev</p>
+    <p>Started debugging</p>
+    <p>Testing started</p>
 </body>
 
 </html>
